python/testData/inspections/UnresolvedRefCreateFunction.py
s = 3
<error descr="Unresolved reference 'ref'"><caret>ref</error>(s, t=1)